--- a/printer.cfg
+++ b/printer.cfg
@@ -12,21 +12,25 @@
 
 #####################################################################
 # MCU - Obtain mcu definition by "ls -l /dev/serial/by-id/"
+# CAN bus is also available on this board
 #####################################################################
 
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_130030000450335331383520-if00
-# CAN bus is also available on this board
+
+#####################################################################
+# 3UP QUBD - https://www.thingiverse.com/thing:354802
+#####################################################################
 
 [printer]
 kinematics: corexy
-max_velocity: 200
-max_accel: 2000
+max_velocity: 100 ##200
+max_accel: 1000 ## 2000
 max_z_velocity: 5
 max_z_accel: 100
 
 #####################################################################
-#      Virtual SD Card
+# Virtual SD Card
 #####################################################################
 
 [virtual_sdcard]
@@ -40,18 +44,400 @@ path:  /home/qisu/printer_data/gcodes
 #   A list of G-Code commands to execute when an error is reported.
 
 #####################################################################
-#	Homing and Gantry Adjustment Routines
+# moonraker timelapse
 #####################################################################
 
-#[idle_timeout]
-#timeout: 1800
+[include timelapse.cfg]
+
+#####################################################################
+# Homing and Gantry Adjustment, Routines
+#####################################################################
+
+[idle_timeout]
+timeout: 1800
 
 [safe_z_home]
-home_xy_position: 170,170
+home_xy_position: 90,190
 speed: 100.0
 z_hop: 5
 
+#####################################################################
+# ergonomics
+#####################################################################
 
+#[pause_resume]
+ #recover_velocity: 50.
+##When capture/restore is enabled, the speed at which to return to
+##the captured position (in mm/s). Default is 50.0 mm/s.
+
+ #PAUSE:{"id": 123, "method": "pause_resume/cancel"}
+ #RESUME: [VELOCITY=50]
+ #CLEAR_PAUSE: 
+ #CANCEL_PRINT:
+
+#####################################################################
+# X Stepper Settings
+#####################################################################
+
+# X Stepper
+# Driver0
+[stepper_x]
+step_pin: PF13
+dir_pin: !PF12
+enable_pin: !PF14
+microsteps: 16
+rotation_distance: 40
+endstop_pin: !PG6
+position_endstop: 0.01
+position_max: 185 ## MAx X is 185mm
+homing_speed: 100 ##50
+[tmc2209 stepper_x]
+uart_pin: PC4
+diag_pin: PG6
+run_current: 0.200 ##.800
+stealthchop_threshold: 999999
+
+#####################################################################
+# Y Stepper Settings
+#####################################################################
+
+# Y Stepper
+# Driver1
+[stepper_y]
+step_pin: PG0
+dir_pin: !PG1
+enable_pin: !PF15
+microsteps: 16
+rotation_distance: 40
+endstop_pin: !PG9
+position_endstop: 0.01
+position_max: 202 ##Max  is 205mm
+homing_speed: 100 
+[tmc2209 stepper_y]
+uart_pin: PD11
+diag_pin: PG9
+run_current: 0.200 
+stealthchop_threshold: 999999
+
+#####################################################################
+# Z Stepper 
+#####################################################################
+
+# Z Stepper
+# Driver2
+[stepper_z]
+step_pin: PF11
+dir_pin: !PG3
+enable_pin: !PG5
+gear_ratio: 144:20 ##144:20 = 7.0mm actual print heaight over 7.0mm in slicer
+rotation_distance: 8
+microsteps: 16
+full_steps_per_rotation: 200
+endstop_pin: !PG10
+position_endstop: 0
+position_max: 190 ##190mm MAX
+homing_speed: 800 ##400
+[tmc2209 stepper_z]
+uart_pin: PC6
+diag_pin: PG10
+run_current: 0.200
+stealthchop_threshold: 999999
+
+#####################################################################
+# Extruder - Stepper
+#####################################################################
+
+# Driver4
+[extruder]
+step_pin: PF9
+dir_pin: PF10
+enable_pin: !PG2
+microsteps: 16
+full_steps_per_rotation: 200
+rotation_distance: 29.000 ##29.000 is working with 11mm gear on .4mm extruder
+nozzle_diameter: 0.400 ## 0.400
+filament_diameter: 1.740 ## -.015 for roller squish
+
+#####################################################################
+# Extruder - Heating Element  pid_Kp=27.459 pid_Ki=1.308 pid_Kd=144.158
+#####################################################################
+heater_pin: PA2 # HE0 
+sensor_pin:  PF4 # T0 J45
+sensor_type: Generic 3950
+control: pid
+pid_Kp: 27.459
+pid_Ki: 1.308
+pid_Kd: 144.158
+min_temp: 0
+max_temp: 270
+[thermistor Trianglelab-NTC100K-B3950]
+temperature1: 25
+resistance1: 103180
+temperature2: 150
+resistance2: 1366.2
+temperature3: 250
+resistance3: 168.6
+[tmc2209 extruder]
+uart_pin: PF2
+run_current: 0.200
+stealthchop_threshold: 999999
+
+#####################################################################
+# Heated Bed PID parameters: pid_Kp=50.175 pid_Ki=0.322 pid_Kd=1954.954
+#####################################################################
+
+[heater_bed]
+heater_pin: PA1 #HE1
+sensor_pin: PF3 # TB J44
+sensor_type: ATC Semitec 104NT-4-R025H42G
+#control: watermark
+#max_delta: .10
+control: pid
+pid_Kp: 50.175
+pid_Ki: 0.322
+pid_Kd: 1954.954
+min_temp: 0
+max_temp: 80
+#[thermistor ATC Semitec 104NT-4]
+#temperature1: 25
+#resistance1: 100000
+#temperature2: 160
+#resistance2: 1074
+#temperature3: 300
+#resistance3: 82.78
+
+#####################################################################
+#	Thermistor definitions
+#####################################################################
+
+#These are in use now
+## 24V Cartridge Heater with 1m wiring
+## NTC 3950 100k thermistor
+
+#[thermistor Trianglelab NTC100K B3950]
+## values calibrated against a PT100 reference
+#temperature1: 25.0ATC Semitec 104GT-
+#resistance1: 103180.0
+#temperature2: 150.0
+#resistance2: 1366.2
+#temperature3: 250.0
+#resistance3: 168.6
+
+
+#####################################################################
+#	Other Potential Steppers
+#####################################################################
+
+#[filament_switch_sensor material_0]
+#switch_pin: PG12
+
+# Driver5
+#[extruder1]
+#step_pin: PC13
+#dir_pin: PF0
+#enable_pin: !PF1
+#heater_pin: PA3 # HE1
+#sensor_pin: PF5 # T1
+#...
+
+#[filament_switch_sensor material_1]
+#switch_pin: PG13
+
+# Driver6
+#[extruder2]
+#step_pin: PE2
+#dir_pin: PE3
+#enable_pin: !PD4
+#heater_pin: PB10 # HE2
+#sensor_pin: PF6 # T2
+#...
+
+#[filament_switch_sensor material_2]
+#switch_pin: PG14
+
+# Driver7
+#[extruder3]
+#step_pin: PE6
+#dir_pin: PA14
+#enable_pin: !PE0
+#heater_pin: PB11 # HE3
+#sensor_pin: PF7 # T3
+#...
+
+#[filament_switch_sensor material_3]
+#switch_pin: PG15
+
+#####################################################################
+#   Cooling/Fans
+#####################################################################
+
+[fan] ## Radial part fan, 12v
+pin: PA8
+
+#[heater_fan fan1] ##e3d v6 body fan, 12v fan pinned to 5v for lowered noise
+#pin: PE5
+
+#[heater_fan fan2]
+#pin: PD12
+
+#[heater_fan fan3]
+#pin: PD13
+
+#[heater_fan fan4]
+#pin: PD14
+
+#[controller_fan fan5] #maybe a psu fan, 12v
+#pin: PD15
+
+########################################
+# TMC2209 configuration
+########################################
+
+#[tmc2209 stepper_x]
+#uart_pin: PC4
+#diag_pin: PG6
+#run_current: 0.800
+#stealthchop_threshold: 999999
+
+#[tmc2209 stepper_y]
+#uart_pin: PD11
+#diag_pin: PG9
+#run_current: 0.800
+#stealthchop_threshold: 999999
+
+#[tmc2209 stepper_z]
+#uart_pin: PC6
+#diag_pin: PG10
+#run_current: 0.800
+#stealthchop_threshold: 999999
+
+#[tmc2209 stepper_]
+#uart_pin: PC7
+##diag_pin: PG11
+#run_current: 0.650
+#stealthchop_threshold: 999999
+
+#[tmc2209 extruder]
+#uart_pin: PF2
+#run_current: 0.800
+#stealthchop_threshold: 999999
+
+#[tmc2209 extruder1]
+#uart_pin: PE4
+#run_current: 0.800
+#stealthchop_threshold: 999999
+
+#[tmc2209 extruder2]
+#uart_pin: PE1
+#run_current: 0.800
+#stealthchop_threshold: 999999
+
+#[tmc2209 extruder3]
+#uart_pin: PD3
+#run_current: 0.800
+#stealthchop_threshold: 999999
+
+########################################
+# TMC2130 configuration
+########################################
+
+#[tmc2130 stepper_x]
+#cs_pin: PC4
+#spi_bus: spi1
+##diag1_pin: PG6
+#run_current: 0.800
+#stealthchop_threshold: 999999
+
+#[tmc2130 stepper_y]
+#cs_pin: PD11
+#spi_bus: spi1
+##diag1_pin: PG9
+#run_current: 0.800
+#stealthchop_threshold: 999999
+
+#[tmc2130 stepper_z]
+#cs_pin: PC6
+#spi_bus: spi1
+##diag1_pin: PG10
+#run_current: 0.650
+#stealthchop_threshold: 999999
+
+#[tmc2130 stepper_]
+#cs_pin: PC7
+#spi_bus: spi1
+##diag1_pin: PG11
+#run_current: 0.800
+#stealthchop_threshold: 999999
+
+#[tmc2130 extruder]
+#cs_pin: PF2
+#spi_bus: spi1
+#run_current: 0.800
+#stealthchop_threshold: 999999
+
+#[tmc2130 extruder1]
+#cs_pin: PE4
+#spi_bus: spi1
+#run_current: 0.800
+#stealthchop_threshold: 999999
+
+#[tmc2130 extruder2]
+#cs_pin: PE1
+#spi_bus: spi1
+#run_current: 0.800
+#stealthchop_threshold: 999999
+
+#[tmc2130 extruder3]
+#cs_pin: PD3
+#spi_bus: spi1
+#run_current: 0.800
+#stealthchop_threshold: 999999
+
+#####################################################################
+#####################################################################
+
+[board_pins]
+aliases:
+    # EXP1 header
+    EXP1_1=PE8, EXP1_2=PE7,
+    EXP1_3=PE9, EXP1_4=PE10,
+    EXP1_5=PE12, EXP1_6=PE13,    # Slot in the socket on this side
+    EXP1_7=PE14, EXP1_8=PE15,
+    EXP1_9=<GND>, EXP1_10=<5V>,
+
+    # EXP2 header
+    EXP2_1=PA6, EXP2_2=PA5,
+    EXP2_3=PB1, EXP2_4=PA4,
+    EXP2_5=PB2, EXP2_6=PA7,      # Slot in the socket on this side
+    EXP2_7=PC15, EXP2_8=<RST>,
+    EXP2_9=<GND>, EXP2_10=PC5
+
+#####################################################################
+#####################################################################
+
+# See the sample-lcd.cfg file for definitions of common LCD displays.
+
+#####################################################################
+#####################################################################
+
+# A [probe] section can be defined instead with a pin: setting identical
+# to the sensor_pin: for a bltouch
+#[bltouch]
+#sensor_pin: PB7
+#control_pin: PB6
+#z_offset: 0
+
+#####################################################################
+#####################################################################
+
+#[neopixel my_neopixel]
+#pin: PB0
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [stepper_z]
+#*# position_endstop = 0.005
 
 #####################################################################
 #      X Stepper Settings
