--- a/printer.cfg
+++ b/printer.cfg
@@ -89,12 +89,12 @@ microsteps: 16
 rotation_distance: 40
 endstop_pin: !PG6
 position_endstop: 0.01
-position_max: 185 ## MAx X is 185mm
+position_max: 185 ## Max X is 185mm
 homing_speed: 100 ##50
 [tmc2209 stepper_x]
 uart_pin: PC4
 diag_pin: PG6
-run_current: 0.200 ##.800
+run_current: 0.200 ##.800 forum says .600
 stealthchop_threshold: 999999
 
 #####################################################################
@@ -116,7 +116,7 @@ homing_speed: 100
 [tmc2209 stepper_y]
 uart_pin: PD11
 diag_pin: PG9
-run_current: 0.200 
+run_current: 0.200 ##.600
 stealthchop_threshold: 999999
 
 #####################################################################
@@ -140,7 +140,7 @@ homing_speed: 800 ##400
 [tmc2209 stepper_z]
 uart_pin: PC6
 diag_pin: PG10
-run_current: 0.200
+run_current: 0.200 ##.600
 stealthchop_threshold: 999999
 
 #####################################################################
@@ -179,11 +179,11 @@ temperature3: 250
 resistance3: 168.6
 [tmc2209 extruder]
 uart_pin: PF2
-run_current: 0.200
+run_current: 0.200 ## forum says extruder stepper needs more torque, run at .650
 stealthchop_threshold: 999999
 
 #####################################################################
-# Heated Bed PID parameters: pid_Kp=50.175 pid_Ki=0.322 pid_Kd=1954.954
+## Heated Bed PID parameters: pid_Kp=50.175 pid_Ki=0.322 pid_Kd=1954.954
 #####################################################################
 
 [heater_bed]
@@ -207,7 +207,7 @@ max_temp: 80
 #resistance3: 82.78
 
 #####################################################################
-#	Thermistor definitions
+##Thermistor definitions
 #####################################################################
 
 #These are in use now
