--- a/moonraker.conf
+++ b/moonraker.conf
@@ -63,3 +63,17 @@ frame_path: /tmp/timelapse/
 ##   Directory where the temporary frames are saved
 ffmpeg_binary_path: /usr/bin/ffmpeg
 ##   Directory where ffmpeg is installed
+
+[power Printer]
+type: gpio
+pin: !gpiochip0/gpio21
+locked_while_printing: False
+initial_state:on
+Timer:8
+
+[power Reset Power]
+type: gpio
+pin: gpiochip0/gpio20
+locked_while_printing: True
+initial_state:off
+Timer:2
