--- a/printer.cfg
+++ b/printer.cfg
@@ -18,17 +18,14 @@
 # MCU - Obtain mcu definition by "ls -l /dev/serial/by-id/"
 # CAN bus is also available on this board
 #####################################################################
-
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_130030000450335331383520-if00
 
-[include timelapse.cfg]
-
-[include mainsail.cfg]
-
-#####################################################################
-# Virtual SD Card
-#####################################################################
+[temperature_sensor mcu] 
+sensor_type: temperature_mcu
+sensor_mcu: mcu 
+min_temp: 0
+max_temp: 100
 
 [virtual_sdcard]
 path:  /home/qisu/printer_data/gcodes
@@ -40,75 +37,40 @@ path:  /home/qisu/printer_data/gcodes
 #on_error_gcode:
 #   A list of G-Code commands to execute when an error is reported.
 
+[include timelapse.cfg]
+
+[include mainsail.cfg]
+#[include mobileraker.cfg]
 ###############################################################################################################################################################################################################
 # Homing and Gantry Adjustment, Routines MAX_XYZ=X185 Y205 Z190
 ###############################################################################################################################################################################################################
 
 [printer]
 kinematics: corexy
-max_velocity: 1000 ##200
-max_accel: 4000 ## 2000
-max_accel_to_decel: 4000 #1000
+max_velocity: 400 ## 200 -800
+max_accel: 2000 ## 2000 - 4000
+max_accel_to_decel: 2000 # 1000 - 2000
 square_corner_velocity: 5 ## 5
-max_z_velocity: 8 ##5
-max_z_accel: 400 ##50
+max_z_velocity: 3 ## 5 - 8
+max_z_accel: 400 ## 50 - 400
 
 ###############################################################################################################################################################################################################
 ##Safe_Home or Park Position
 ###############################################################################################################################################################################################################
 
-[idle_timeout]
+[Idle_Timeout]
 timeout: 600
 [safe_z_home]
 home_xy_position: 45,190
-#speed: 40 ##40
 z_hop: 5 ##
 z_hop_speed: 500 ##100
-#   Speed (in mm/s) at which the Z axis is lifted prior to homing. The
-#   default is 15 mm/s.
 move_to_previous: False
-#   When set to True, the X and Y axes are reset to their previous
-#   positions after Z axis homing. The default is False.
-
-###############################################################################################################################################################################################################
-# ergonomics
-###############################################################################################################################################################################################################
-
+#   When set to True, the X and Y axes are reset to their previous positions after Z axis homing. The default is False.
 [pause_resume]
 recover_velocity: 100
 
 ###############################################################################################################################################################################################################
-# Accelerometer (GY-291 ADXL345 3-Axis Digital Acceleration of Gravity Tilt Module with IIC SPI Transmission for Arduino)
-###############################################################################################################################################################################################################
-
-#[adxl345]
-#cs_pin:
-#   The SPI enable pin for the sensor. This parameter must be provided.
-#spi_speed: 5000000
-#   The SPI speed (in hz) to use when communicating with the chip.
-#   The default is 5000000.
-#spi_bus:
-#spi_software_sclk_pin:
-#spi_software_mosi_pin:
-#spi_software_miso_pin:
-#   See the "common SPI settings" section for a description of the
-#   above parameters.
-#axes_map: x, y
-#   The accelerometer axis for each of the printer's X, Y, and Z axes.
-#   This may be useful if the accelerometer is mounted in an
-#   orientation that does not match the printer orientation. For
-#   example, one could set this to "y, x, z" to swap the X and Y axes.
-#   It is also possible to negate an axis if the accelerometer
-#   direction is reversed (eg, "x, z, -y"). The default is "x, y, z".
-#rate: 3200
-#   Output data rate for ADXL345. ADXL345 supports the following data
-#   rates: 3200, 1600, 800, 400, 200, 100, 50, and 25. Note that it is
-#   not recommended to change this rate from the default 3200, and
-#   rates below 800 will considerably affect the quality of resonance
-#   measurements.
-
-###############################################################################################################################################################################################################
-# X Stepper Settings
+# X Y Z Stepper Settings
 ###############################################################################################################################################################################################################
 
 # X Stepper
@@ -129,10 +91,6 @@ diag_pin: PG6
 run_current: 0.600 ##.600
 stealthchop_threshold: 999999
 
-###############################################################################################################################################################################################################
-# Y Stepper Settings
-###############################################################################################################################################################################################################
-
 # Y Stepper
 # Driver1
 [stepper_y]
@@ -151,10 +109,6 @@ diag_pin: PG9
 run_current: 0.600 
 stealthchop_threshold: 999999
 
-###############################################################################################################################################################################################################
-# Z Stepper 
-###############################################################################################################################################################################################################
-
 # Z Stepper
 # Driver2
 [stepper_z]
@@ -168,7 +122,7 @@ full_steps_per_rotation: 200
 endstop_pin: PG10
 position_endstop: 0
 position_max: 190 ##190mm MAX
-homing_speed: 40 ##40
+homing_speed: 100 ##40
 [tmc2209 stepper_z]
 uart_pin: PC6
 diag_pin: PG10
@@ -179,6 +133,7 @@ stealthchop_threshold: 999999
 # Extruder - Stepper PID parameters: pid_Kp=31.512 pid_Ki=1.077 pid_Kd=230.433
 ###############################################################################################################################################################################################################
 
+# E-Stepper
 # Driver4
 [extruder]
 step_pin: PF9
@@ -189,7 +144,6 @@ full_steps_per_rotation: 200
 rotation_distance: 29.000 ##29.000 is working with 11mm gear on .4mm extruder
 nozzle_diameter: 0.600 ## 0.400
 filament_diameter: 1.750 ## -.015 for roller squish
-
 heater_pin: PA2 # HE0 
 sensor_pin:  PF4 # T0 J45
 sensor_type: Generic 3950
@@ -213,10 +167,6 @@ uart_pin: PF2
 run_current: 0.650
 stealthchop_threshold: 999999
 
-###############################################################################################################################################################################################################
-# FirmWare Retraction 
-###############################################################################################################################################################################################################
-
 [firmware_retraction]
 retract_length: 1
 #   The length of filament (in mm) to retract when G10 is activated,
@@ -238,14 +188,14 @@ unretract_speed: 50
 heater_pin: PA1 #HE1
 sensor_pin: PF3 # TB J44
 sensor_type: ATC Semitec 104NT-4-R025H42G
-#control: watermark
-#max_delta: .10
-control: pid
-pid_Kp: 50.175
-pid_Ki: 1.5
-pid_Kd: 1954.954
+control: watermark #using watermark instead of pid due to heated bed/board comaptibility, currently blows fuses without relay
+max_delta: .10
+#control: pid
+#pid_Kp: 50.175
+#pid_Ki: 1.5
+#pid_Kd: 1954.954
 min_temp: 0
-max_temp: 80
+max_temp: 70
 #[thermistor ATC Semitec 104NT-4]
 #temperature1: 25
 #resistance1: 100000
@@ -276,8 +226,8 @@ max_temp: 80
 #   Cooling/Fans
 #####################################################################
 
-#[fan] ## Radial part fan, 12v
-#pin: PA8
+[fan] ## Radial part fan, 12v
+pin: PA8
 #kick_start_time: 0.400
 
 #[heater_fan fan1] ##e3d v6 body fan, 12v fan pinned to 5v for lowered noise
@@ -289,48 +239,53 @@ max_temp: 80
 #[heater_fan fan3]
 #pin: PD13
 
-#[heater_fan fan4]
-#pin: PD14
-
-#[controller_fan fan5] #maybe a psu fan, 12v
-#pin: PD15
+[fan_generic fan4]
+pin: PD14
 
 ###############################################################################################################################################################################################################
 ## BTT Power Relay V1.2
 ###############################################################################################################################################################################################################
 
-#[output_pin PS_ON_OFF]
-#pin: PE11
-#value: 1
+[output_pin PSU]
+pin: PE11
+value: 1
 
-#####################################################################
-#####################################################################
-#[board_pins my_aliases]
-#mcu: mcu
-#   A comma separated list of micro-controllers that may use the
-#   aliases. The default is to apply the aliases to the main "mcu".
-#aliases:
-#aliases_<name>:PS_ON=PE11
-#   A comma separated list of "name=value" aliases to create for the
-#   given micro-controller. For example, "EXP1_1=PE6" would create an
-#   "EXP1_1" alias for the "PE6" pin. However, if "value" is enclosed
-#   in "<>" then "name" is created as a reserved pin (for example,
-#   "EXP1_9=<GND>" would reserve "EXP1_9"). Any number of options
-#   starting with "aliases_" may be specified.
+[gcode_macro PSU_ON]
+gcode =
+  SET_PIN_PSU=1
+
+[gcode_macro PSU_OFF]
+gcode =
+  SET_PIN_PSU=0
+
+###############################################################################################################################################################################################################
+## LED
+###############################################################################################################################################################################################################
+
+[output_pin LED]
+pin = PD15
+pwm: false
+#hardware_pwm: false
+value: 1
+
+[gcode_macro LED_ON]
+gcode =
+  SET_PIN_LED=1
+
+[gcode_macro LED_OFF]
+gcode =
+  SET_PIN_LED=0
+
+####################################################################
 
 [board_pins my_aliases]
 mcu: mcu
 #   A comma separated list of micro-controllers that may use the
 #   aliases. The default is to apply the aliases to the main "mcu".
 aliases:
-aliases_<name>:PS_ON=PE11
-#   A comma separated list of "name=value" aliases to create for the
-#   given micro-controller. For example, "EXP1_1=PE6" would create an
-#   "EXP1_1" alias for the "PE6" pin. However, if "value" is enclosed
-#   in "<>" then "name" is created as a reserved pin (for example,
-#   "EXP1_9=<GND>" would reserve "EXP1_9"). Any number of options
-#   starting with "aliases_" may be specified.
-
+aliases_<name>: PSU=PE11
+aliases_<name>: Power_DET=PC0
+aliases_<name>: LED=PD15
 
 [board_pins]
 aliases:
@@ -348,4 +303,10 @@ aliases:
     EXP2_7=PC15, EXP2_8=<RST>,
     EXP2_9=<GND>, EXP2_10=PC5
 
-#####################################################################
+######################################################################
+#
+#
+#
+#
+#
+#
